// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: FormAuthMethod > completed form > edit mode > disabled user_oidc app > should show disabled error message and disabled sso button when oauth2 is selected 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="true" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <error-label-stub data-v-8809ae1a="" error="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." disabled="true"></error-label-stub>
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" class="mr-2" data-test-id="cancel-auth-method-edit">Cancel</nc-button-stub>
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="true" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > completed form > edit mode > disabled user_oidc app > should show error message and disabled sso button when oidc is selected 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <error-note-stub data-v-8809ae1a="" errortitle="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." errormessage="" errorlink="//index.php/settings/apps/files/user_oidc" errorlinklabel="Install latest version now"></error-note-stub>
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="true" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <error-label-stub data-v-8809ae1a="" error="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." disabled="false"></error-label-stub>
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" class="mr-2" data-test-id="cancel-auth-method-edit">Cancel</nc-button-stub>
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="true" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > completed form > edit mode > should show form fields 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" class="mr-2" data-test-id="cancel-auth-method-edit">Cancel</nc-button-stub>
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="true" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > completed form > edit mode > unsupported user_oidc app > should show disabled error message and disabled sso button when oauth2 is selected 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="true" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <error-label-stub data-v-8809ae1a="" error="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." disabled="true"></error-label-stub>
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" class="mr-2" data-test-id="cancel-auth-method-edit">Cancel</nc-button-stub>
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="true" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > completed form > edit mode > unsupported user_oidc app > should show error message and disabled sso button when oidc is selected 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <error-note-stub data-v-8809ae1a="" errortitle="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." errormessage="" errorlink="//index.php/settings/apps/files/user_oidc" errorlinklabel="Install latest version now"></error-note-stub>
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="true" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <error-label-stub data-v-8809ae1a="" error="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." disabled="false"></error-label-stub>
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" class="mr-2" data-test-id="cancel-auth-method-edit">Cancel</nc-button-stub>
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="true" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > completed form > should show set form label in view mode 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <p data-v-8809ae1a="" class="auth-method--label">Single-Sign-On through OpenID Connect Identity Provider</p>
    <div data-v-8809ae1a="" class="form-actions">
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-auth-method"> Edit authentication method</nc-button-stub>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > completed form > view mode: disabled user_oidc app > should not show form errors if setup with oauth 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <p data-v-8809ae1a="" class="auth-method--label">Two-way OAuth 2.0 authorization code flow</p>
    <div data-v-8809ae1a="" class="form-actions">
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-auth-method"> Edit authentication method</nc-button-stub>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > completed form > view mode: disabled user_oidc app > should show form errors if setup with oidc 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="true" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <error-note-stub data-v-8809ae1a="" errortitle="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." errormessage="" errorlink="//index.php/settings/apps/files/user_oidc" errorlinklabel="Install latest version now"></error-note-stub>
  <div data-v-8809ae1a="" class="auth-method">
    <p data-v-8809ae1a="" class="auth-method--label">Single-Sign-On through OpenID Connect Identity Provider</p>
    <div data-v-8809ae1a="" class="form-actions">
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-auth-method"> Edit authentication method</nc-button-stub>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > initial incomplete form > current setting: authentication-method > should save the setting on submit 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="true" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <p data-v-8809ae1a="" class="auth-method--label">Single-Sign-On through OpenID Connect Identity Provider</p>
    <div data-v-8809ae1a="" class="form-actions">
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="secondary" wide="false" data-test-id="edit-auth-method"> Edit authentication method</nc-button-stub>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > initial incomplete form > current setting: authentication-method > should show error on save failure 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oidc" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > initial incomplete form > current setting: authentication-method > should show the required form fields 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <!--v-if-->
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > initial incomplete form > disabled user_oidc app > should show disabled error message and disabled sso button 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="true" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <error-label-stub data-v-8809ae1a="" error="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." disabled="true"></error-label-stub>
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod > initial incomplete form > server url not set > should show form heading with disabled status 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="true" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Component: FormAuthMethod > initial incomplete form > unsupported user_oidc app > should show disabled error message and disabled sso button 1`] = `
"<div data-v-8809ae1a="" class="authentication-method">
  <form-heading-stub data-v-8809ae1a="" index="2" title="Authentication method" isdisabled="false" iscomplete="false" issetupcompletewithoutprojectfolders="false" isprojectfoldersetupheading="false" haserror="false" showencryptionwarningforgroupfolders="false" isdarktheme="false"></form-heading-stub>
  <!--v-if-->
  <div data-v-8809ae1a="" class="auth-method">
    <div data-v-8809ae1a="">
      <div data-v-8809ae1a="" class="auth-method--hint">
        <p data-v-8809ae1a="" class="title">Need help setting this up?</p>
        <p data-v-8809ae1a="" class="description">Please read our guide on {htmlLink}.</p><!-- eslint-disable-line vue/no-v-html -->
      </div>
      <div data-v-8809ae1a="" class="auth-method--options">
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="oauth-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="false" indeterminate="false" required="false" loading="false" class="radio-check" value="oauth2">Two-way OAuth 2.0 authorization code flow</nc-checkbox-radio-switch-stub>
        <nc-checkbox-radio-switch-stub data-v-8809ae1a="" id="sso-auth-method" aria-label="" type="radio" buttonvariant="false" buttonvariantgrouped="no" modelvalue="oauth2" disabled="true" indeterminate="false" required="false" loading="false" class="radio-check" value="oidc">Single-Sign-On through OpenID Connect Identity Provider</nc-checkbox-radio-switch-stub>
        <div data-v-8809ae1a="" class="info-container">
          <p data-v-8809ae1a="">Requires an active Enterprise Corporate plan in OpenProject.</p>
          <error-label-stub data-v-8809ae1a="" error="This feature requires version 1.0.0 (or higher) of &quot;OpenID Connect user backend&quot; app. Please install or update the app." disabled="true"></error-label-stub>
        </div>
      </div>
    </div>
    <div data-v-8809ae1a="" class="form-actions">
      <!--v-if-->
      <!--v-if-->
      <nc-button-stub data-v-8809ae1a="" alignment="center" disabled="false" size="normal" target="_self" type="button" variant="primary" wide="false" data-test-id="save-auth-method"> Save</nc-button-stub>
    </div>
  </div>
</div>"
`;
